mutants.out/log/crates__idle-ipc__src__protocol.rs_line_96_col_9.log

*** crates/idle-ipc/src/protocol.rs:96:9: replace IpcResponse::read_from -> std::io::Result<Self> with Ok(Default::default())

*** mutation diff:
--- crates/idle-ipc/src/protocol.rs
+++ replace IpcResponse::read_from -> std::io::Result<Self> with Ok(Default::default())
@@ -88,27 +88,11 @@
             IpcResponse::Ack => {
                 writer.write_all(&[2])?;
             }
         }
         Ok(())
     }
 
     pub fn read_from<R: std::io::Read>(mut reader: R) -> std::io::Result<Self> {
-        let mut tag = [0u8; 1];
-        reader.read_exact(&mut tag)?;
-        match tag[0] {
-            0 => Ok(IpcResponse::Ready),
-            1 => {
-                let mut scan_byte = [0u8; 1];
-                reader.read_exact(&mut scan_byte)?;
-                Ok(IpcResponse::FrameReady {
-                    scanlines: scan_byte[0] != 0,
-                })
-            }
-            2 => Ok(IpcResponse::Ack),
-            _ => Err(std::io::Error::new(
-                std::io::ErrorKind::InvalidData,
-                "invalid response tag",
-            )),
-        }
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }


*** /home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=idle-ipc@0.4.0
warning: /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-cli/Cargo.toml: file `/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-cli/src/main.rs` found to be present in multiple build targets:
  * `bin` target `idle`
  * `bin` target `idlescreen`
  * `bin` target `trance`
warning: /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-daemon/Cargo.toml: file `/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-daemon/src/main.rs` found to be present in multiple build targets:
  * `bin` target `idle-daemon`
  * `bin` target `idlescreen-daemon`
  * `bin` target `trance-daemon`
       Fresh libc v0.2.188
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh autocfg v1.5.1
       Fresh bitflags v2.13.1
       Fresh linux-raw-sys v0.12.1
       Fresh fastrand v2.5.0
       Fresh once_cell v1.21.4
       Fresh wait-timeout v0.2.1
       Fresh bit-vec v0.8.0
       Fresh quick-error v1.2.3
       Fresh fnv v1.0.7
       Fresh regex-syntax v0.8.11
       Fresh proc-macro2 v1.0.107
       Fresh getrandom v0.3.4
       Fresh bit-set v0.8.0
       Fresh unarray v0.1.4
       Fresh quote v1.0.47
       Fresh rand_core v0.9.5
       Fresh zerocopy v0.8.55
       Fresh getrandom v0.4.3
       Fresh rustix v1.1.4
       Fresh syn v2.0.119
       Fresh ppv-lite86 v0.2.21
       Fresh tempfile v3.27.0
       Fresh num-traits v0.2.19
       Fresh rand v0.9.5
       Fresh rand_xorshift v0.4.0
       Fresh bytemuck_derive v1.11.0
       Fresh rand_chacha v0.9.0
       Fresh rusty-fork v0.3.1
       Fresh bytemuck v1.25.2
       Fresh proptest v1.11.0
       Fresh idle-api v2.3.1 (/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/idle-api)
       Dirty idle-ipc v0.4.0 (/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/crates/idle-ipc): the file `crates/idle-ipc/src/protocol.rs` has changed (1784876875.593386692s, 475005463ns after last build at 1784876875.118381229s)
   Compiling idle-ipc v0.4.0 (/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/crates/idle-ipc)
     Running `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a0b8bba603035d0f -C extra-filename=-dbadf11ecf5c7d57 --out-dir /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rlib --extern libc=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rlib --extern proptest=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libproptest-b92098e6fc18f2e8.rlib`
     Running `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f6298ca08a0d4778 -C extra-filename=-72a23dfc47ffc5d4 --out-dir /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rmeta --extern libc=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rmeta`
error[E0277]: the trait bound `IpcResponse: Default` is not satisfied
  --> crates/idle-ipc/src/protocol.rs:96:12
   |
96 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `IpcResponse`
   |
help: consider annotating `IpcResponse` with `#[derive(Default)]`
   |
13 + #[derive(Default)]
14 | pub enum IpcResponse {
   |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `idle-ipc` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f6298ca08a0d4778 -C extra-filename=-72a23dfc47ffc5d4 --out-dir /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rmeta --extern libc=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `protocol::IpcResponse: Default` is not satisfied
  --> crates/idle-ipc/src/protocol.rs:96:12
   |
96 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `protocol::IpcResponse`
   |
help: consider annotating `protocol::IpcResponse` with `#[derive(Default)]`
   |
13 + #[derive(Default)]
14 | pub enum IpcResponse {
   |

error: could not compile `idle-ipc` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jeryd/.rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name idle_ipc --edition=2024 crates/idle-ipc/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a0b8bba603035d0f -C extra-filename=-dbadf11ecf5c7d57 --out-dir /tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps --extern idle_api=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libidle_api-fffa68b90ae709d7.rlib --extern libc=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/liblibc-07c3a6f7013cd5d4.rlib --extern proptest=/tmp/cargo-mutants-idle-audit-graph-kTM01z.tmp/target/debug/deps/libproptest-b92098e6fc18f2e8.rlib` (exit status: 1)

*** result: Failure(101)
